--- a/estilo/style.css
+++ b/estilo/style.css
@@ -56,7 +56,7 @@ header > p {
     max-width: 739px;
     padding: 0px 10px 0px 10px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315)
 }
 
